# THYD-Lexical-Analysis

./: CMakeLists.txt  common.h  flexer.cpp  flexer.h  flexer.l  hlexer.cpp  hlexer.h  language.cpp  language.h  lexer.h  main.cpp
test/: mytest.pas  test.pas  test0.pas  test0_hm.pas  test1.pas  test2.pas  test3.pas  test4.pas
